fix(health-monitoring): add months to uptime, fix status update

--- a/packages/translation/src/lang/en.json
+++ b/packages/translation/src/lang/en.json
@@ -1381,7 +1381,7 @@
         "memory": "Memory: {memory}GiB",
         "memoryAvailable": "Available: {memoryAvailable}GiB ({percent}%)",
         "version": "Version: {version}",
-        "uptime": "Uptime: {days} Days, {hours} Hours, {minutes} Minutes",
+        "uptime": "Uptime: {months} Months, {days} Days, {hours} Hours, {minutes} Minutes",
         "loadAverage": "Load average:",
         "minute": "1 minute",
         "minutes": "{count} minutes",
