--- a/packages/translation/src/lang/en.json
+++ b/packages/translation/src/lang/en.json
@@ -1457,7 +1457,12 @@
     "mediaServer": {
       "name": "Current media server streams",
       "description": "Show the current streams on your media servers",
-      "option": {}
+      "option": {},
+      "items": {
+        "user": "User",
+        "name": "Name",
+        "id": "Id"
+      }
     },
     "downloads": {
       "name": "Download Client",
