--- a/packages/translation/src/lang/en.json
+++ b/packages/translation/src/lang/en.json
@@ -612,6 +612,10 @@
       },
       "url": {
         "label": "Url"
+      },
+      "attemptSearchEngineCreation": {
+        "label": "Create Search Engine",
+        "description": "Integration \"{kind}\" can be used with the search engines. Check this to automatically configure the search engine."
       }
     },
     "action": {
