--- a/packages/translation/src/lang/de.json
+++ b/packages/translation/src/lang/de.json
@@ -1459,8 +1459,8 @@
       "description": "",
       "option": {},
       "items": {
-        "user": "",
-        "name": "",
+        "user": "Benutzer",
+        "name": "Name",
         "id": ""
       }
     },
