--- a/packages/translation/src/lang/sl.json
+++ b/packages/translation/src/lang/sl.json
@@ -293,7 +293,7 @@
     },
     "permission": {
       "admin": {
-        "title": "",
+        "title": "Admin",
         "item": {
           "admin": {
             "label": "",
@@ -1199,7 +1199,7 @@
       },
       "align": {
         "left": "Leva stran",
-        "center": "",
+        "center": "Center",
         "right": "Desno"
       },
       "popover": {
@@ -1213,7 +1213,7 @@
       }
     },
     "iframe": {
-      "name": "",
+      "name": "iFrame",
       "description": "Vstavite katero koli vsebino iz interneta. Nekatera spletna mesta lahko omejijo dostop.",
       "option": {
         "embedUrl": {
@@ -1459,8 +1459,8 @@
       "description": "",
       "option": {},
       "items": {
-        "user": "",
-        "name": "",
+        "user": "Uporabnik",
+        "name": "Ime",
         "id": ""
       }
     },
@@ -1690,7 +1690,7 @@
           "empty": "Prazno",
           "table": {
             "file": "",
-            "eta": "",
+            "eta": "ETA",
             "progress": "Napredek",
             "transcode": "",
             "healthCheck": ""
@@ -2047,7 +2047,7 @@
         "tools": {
           "label": "Orodja",
           "items": {
-            "docker": "",
+            "docker": "Docker",
             "logs": "",
             "api": "",
             "tasks": ""
@@ -2204,7 +2204,7 @@
           },
           "field": {
             "id": {
-              "label": ""
+              "label": "ID"
             },
             "creator": {
               "label": "Ustvarjalec"
@@ -2395,7 +2395,7 @@
               },
               "table": {
                 "header": {
-                  "id": "",
+                  "id": "ID",
                   "createdBy": ""
                 }
               }
@@ -2607,7 +2607,7 @@
       "tools": {
         "label": "Orodja",
         "docker": {
-          "label": ""
+          "label": "Docker"
         },
         "logs": {
           "label": ""
